<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gz_dvs_plugin</name>
  <version>0.1.0</version>
  <description>gz-sim System plugin for DVS (event camera) emulation</description>
  <maintainer email="ndh@todo.todo">ndh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>gz-cmake3</build_depend>
  <build_depend>gz-plugin2</build_depend>
  <build_depend>gz-sim8</build_depend>
  <build_depend>gz-rendering8</build_depend>
  <build_depend>gz-common5</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
